--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,3 @@
-# [[[cog
-# from aider.help_pats import exclude_website_pats
-# ]]]
-# [[[end]]]
 [project]
 name = "aider-chat"
 version = "0.57.2"
@@ -22,22 +18,29 @@ classifiers = [
 ]
 requires-python = ">=3.9,<3.13"
 dynamic = ["dependencies", "optional-dependencies"]
+
 [project.urls]
 Homepage = "https://github.com/paul-gauthier/aider"
+
 [project.scripts]
 aider = "aider.main:main"
+
 [tool.setuptools.dynamic]
 dependencies = { file = "requirements.txt" }
+
 [tool.setuptools.dynamic.optional-dependencies]
 dev = { file = "requirements/requirements-dev.txt" }
 help = { file = "requirements/requirements-help.txt" }
 browser = { file = "requirements/requirements-browser.txt" }
 playwright = { file = "requirements/requirements-playwright.txt" }
+
 [tool.setuptools.packages.find]
 include = ["aider*", "aider.website"]
+
 [tool.setuptools.package-data]
 "aider" = ["queries/*.scm"]
 "aider.website" = ["**/*.md"]
+
 [tool.setuptools.exclude-package-data]
 "aider.website" = [
 # [[[cog
@@ -53,13 +56,7 @@ include = ["aider*", "aider.website"]
 "assets/**",
 # [[[end]]]
 ]
+
 [build-system]
-requires = ["setuptools>=68", "setuptools_scm[toml]>=8"]
+requires = ["setuptools>=68"]
 build-backend = "setuptools.build_meta"
-
-[tool.setuptools_scm]
-write_to = "aider/__version__.py"
-
-[tool.codespell]
-skip = "*.svg,Gemfile.lock"
-write-changes = true
